--- a/digital.html
+++ b/digital.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="style.js" defer></script>
-    <title>Document</title>
+    <title>MARKETING METHOD</title>
 </head>
 <body>
    <div class="container">
